--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.14.1",
     "firebase": "^8.1.2",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
